<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_background_app"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_date_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_expense"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="@dimen/standart_margin_horizontal"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_type_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_expense"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/standart_margin_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/txt_cost_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost_expense"
            android:textSize="14dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/standart_margin_horizontal"/>

    </LinearLayout>

</LinearLayout>