<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MainFragment">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/PieChart"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/pie_charts_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/list_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#072655"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PieChart">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="@color/white"
            android:text="@string/txt_add_button"
            android:textSize="@dimen/txt_menu_size"
            android:textAlignment="center"
            android:layout_weight="1"
            app:drawableTopCompat="@drawable/ic_add_button"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/txt_filter_button"
            android:textSize="@dimen/txt_menu_size"
            android:textAlignment="center"
            android:layout_weight="1"
            app:drawableTopCompat="@drawable/ic_filter_button"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/txt_statistics_button"
            android:textSize="@dimen/txt_menu_size"
            android:textAlignment="center"
            android:layout_weight="1"
            app:drawableTopCompat="@drawable/ic_statisticks_button"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/txt_settings_button"
            android:textSize="@dimen/txt_menu_size"
            android:textAlignment="center"
            android:layout_weight="1"
            app:drawableTopCompat="@drawable/ic_settings_button"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/last_sells"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C6C6C6"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_items">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_last_sells"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_last_sells"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>